buildscript {
    ext {
        apacheCommonsLangVersion = '3.7'
        apacheCommonsMathVersion = '3.6.1'
        flywayVersion = '11.0.0'
        guavaVersion = '24.0-jre'
        hibernateVersion = '6.6.3.Final'
        lombokVersion = '1.18.30'
        postgresqlVersion = '42.7.4'
        springBootVersion = '3.2.4'
        springDependencyManagementVersion = '1.1.3'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
    id 'jacoco'
}

group = 'com.meryt'
version = '0.0.1-SNAPSHOT'

java {
   sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

configurations {
    all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
}

dependencies {
    //compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")

    implementation ("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")

    implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
    implementation("org.springframework.boot:spring-boot-starter-jetty:${springBootVersion}")
    implementation("org.springframework.boot:spring-boot-starter-jdbc:${springBootVersion}")
    implementation("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")

    implementation("org.hibernate.orm:hibernate-core:${hibernateVersion}")
    implementation("org.postgresql:postgresql:${postgresqlVersion}")
    implementation "org.flywaydb:flyway-core:${flywayVersion}"
    implementation "org.flywaydb:flyway-database-postgresql:${flywayVersion}"

    implementation("com.google.guava:guava:${guavaVersion}")
    implementation("org.apache.commons:commons-math3:${apacheCommonsMathVersion}")
    implementation("org.apache.commons:commons-lang3:${apacheCommonsLangVersion}")

    compileOnly("org.projectlombok:lombok:${lombokVersion}")
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
    testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    jvmArgs '-noverify'
    outputs.upToDateWhen { false }
    finalizedBy jacocoTestReport
    testLogging {
        showStandardStreams = true
    }
}
